# zaik

./: .dockerignore  .gitignore  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  .gitignore  .mise.toml  Dockerfile  Dockerfile.dev  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  __main__.py  cli.py  db.py  llm.py  main.py
backend/app/migrations/: 001_halloween_adventure_seed.py  README.md  __init__.py  manager.py
backend/app/models/: __init__.py  adventure.py  commands.py  game_session.py
backend/app/routes/: __init__.py  game.py
backend/app/services/: __init__.py  command_executor.py  command_parser.py  game_state.py  image_service.py
backend/app/templates/: presentation.html
backend/tests/: test_command_executor.py  test_command_parser.py  test_game_state.py  test_llm.py
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  README.md  index.html  nginx.conf
frontend/src/: App.tsx  index.css
frontend/src/components/: GameTerminal.css  GameTerminal.tsx
